# ADTOF-pytorch

./: README.md  pyproject.toml  requirements.txt
dev/: adtof_pytorch.py  audio_processing.py  convert_weights.py  main.py  post_processing.py  test.mid
examples/: example_usage.py  test_transcription.py  visualize_activations.py
src/adtof_pytorch/: __init__.py  audio.py  cli.py  model.py  post_processing.py
src/adtof_pytorch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adtof_pytorch/data/: adtof_frame_rnn_pytorch_weights.pth
